Add operator ASN GSLB scheduling
